--- a/tensor-patcher-gui/tensor-patcher-gui.csproj
+++ b/tensor-patcher-gui/tensor-patcher-gui.csproj
@@ -171,5 +171,8 @@
   <ItemGroup>
     <None Include="Resources\icon_ok.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\brick_blank.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
