--- a/tensor-patcher-gui/tensor-patcher-gui.csproj
+++ b/tensor-patcher-gui/tensor-patcher-gui.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cave.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
