--- a/tensor-patcher-gui/tensor-patcher-gui.csproj
+++ b/tensor-patcher-gui/tensor-patcher-gui.csproj
@@ -308,5 +308,8 @@
   <ItemGroup>
     <None Include="Resources\selection.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\title.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
